cleaned up htmland js. added verification button and modal

--- a/main.html
+++ b/main.html
@@ -1,13 +1,11 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:https="http://www.w3.org/1999/xhtml">
+<html>
 <head>
     <meta charset="UTF-8">
     <title>Click the picture</title>
-    <link rel="stylesheet" type="text/css" href="css/bootstrap.css"/>
     <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css"/>
-    <link rel="stylesheet" type="text/css" href="css/bootstrap-theme.css"/>
     <link rel="stylesheet" type="text/css" href="css/bootstrap-theme.min.css"/>
-
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
 </head>
 <body>
 
@@ -15,16 +13,16 @@
 
         <div class="row">
             <div class="col-md-3">
-                <img  about="not clicked" class="img-rounded" src="africa-1040052_1280.jpg"/>
+                <img about="not-clicked" class="img-rounded" src="africa-1040052_1280.jpg" alt="africa"/>
             </div>
             <div class="col-md-3">
-                <img about="not clicked" class="img-rounded" src="animal-1039970_1280.jpg"/>
+                <img about="not-clicked" class="img-rounded" src="animal-1039970_1280.jpg" alt="animal"/>
             </div>
             <div class="col-md-3">
-                <img about="not clicked" class="img-rounded" src="candle-1042087_1280.jpg"/>
+                <img about="not-clicked" class="img-rounded" src="candle-1042087_1280.jpg" alt="candle"/>
             </div>
             <div class="col-md-3">
-                <img about="not clicked" class="img-rounded" src="pelican-1032125_1280.jpg"/>
+                <img about="not-clicked" class="img-rounded" src="pelican-1032125_1280.jpg" alt="pelican"/>
             </div>
 
         </div>
@@ -32,96 +30,126 @@
 
         <div class="row">
             <div class="col-md-3">
-                <img about="not clicked" class="img-rounded" src="south-africa-1037338_640.jpg"/>
+                <img about="not-clicked" class="img-rounded" src="south-africa-1037338_640.jpg" alt="south africa"/>
             </div>
             <div class="col-md-3">
-                <img about="not clicked" class="img-rounded" src="adler-1037529_1280.jpg"/>
+                <img about="not-clicked" class="img-rounded" src="adler-1037529_1280.jpg" alt="adler"/>
             </div>
             <div class="col-md-3">
-                <img about="not clicked" class="img-rounded" src="sparrow-1034794_1280.jpg"/>
+                <img about="not-clicked" class="img-rounded" src="sparrow-1034794_1280.jpg" alt="sparrow"/>
             </div>
             <div class="col-md-3">
-                <img about="not clicked" class="img-rounded" src="mandrill-396289_1280.jpg"/>
+                <img about="not-clicked" class="img-rounded" src="mandrill-396289_1280.jpg" alt="mandrill"/>
             </div>
         </div>
         <br/>
 
         <div class="row">
             <div class="col-md-3">
-                <img about="not clicked" class="img-rounded" src="proboscis-monkey-212825_1280.jpg"/>
+                <img about="not-clicked" class="img-rounded" src="proboscis-monkey-212825_1280.jpg" alt="monkey"/>
             </div>
             <div class="col-md-3">
-                <img about="not clicked" class="img-rounded" src="animal-1037361_1280.jpg"/>
+                <img about="not-clicked" class="img-rounded" src="animal-1037361_1280.jpg" alt="animal"/>
             </div>
             <div class="col-md-3">
-                <img about="not clicked" class="img-rounded" src="hyene-puppy-1036478_1280.jpg"/>
+                <img about="not-clicked" class="img-rounded" src="hyene-puppy-1036478_1280.jpg" alt="hyene puppy"/>
             </div>
             <div class="col-md-3">
-                <img about="not clicked" class="img-rounded" src="crocodile-1028289_1280.jpg"/>
+                <img about="not-clicked" class="img-rounded" src="crocodile-1028289_1280.jpg" alt="crocodile"/>
             </div>
         </div>
         <br/>
 
         <div class="row">
             <div class="col-md-3">
-                <img about="not clicked" class="img-rounded" src="husky-1025296_1280.jpg"/>
+                <img about="not-clicked" class="img-rounded" src="husky-1025296_1280.jpg" alt="husky"/>
             </div>
             <div class="col-md-3">
-                <img about="not clicked" class="img-rounded" src="pig-213758_1280.jpg"/>
+                <img about="not-clicked" class="img-rounded" src="pig-213758_1280.jpg" alt="pig"/>
             </div>
             <div class="col-md-3">
-                <img about="not clicked" class="img-rounded" src="bird-1029419_1280.jpg"/>
+                <img about="not-clicked" class="img-rounded" src="bird-1029419_1280.jpg" alt="bird"/>
             </div>
             <div class="col-md-3">
-                <img about="not clicked" class="img-rounded" src="gazelle-1029784_1280.jpg"/>
+                <img about="not-clicked" class="img-rounded" src="gazelle-1029784_1280.jpg" alt="gazelle"/>
             </div>
         </div>
         <br/>
 
         <div class="row">
             <div class="col-md-3">
-                <img about="not clicked" class="img-rounded" src="giraffe-1029795_1280.jpg"/>
+                <img about="not-clicked" class="img-rounded" src="giraffe-1029795_1280.jpg" alt="giraffe"/>
             </div>
             <div class="col-md-3">
-                <img about="not clicked" class="img-rounded" src="zebra-1029779_1280.jpg"/>
+                <img about="not-clicked" class="img-rounded" src="zebra-1029779_1280.jpg" alt="zebra"/>
             </div>
             <div class="col-md-3">
-                <img about="not clicked" class="img-rounded" src="red-macaw-1029154_1280.jpg"/>
+                <img about="not-clicked" class="img-rounded" src="red-macaw-1029154_1280.jpg" alt="red macaw"/>
             </div>
             <div class="col-md-3">
-                <img about="not clicked" class="img-rounded" src="roe-deer-kid-1022356_1280.jpg"/>
+                <img about="not-clicked" class="img-rounded" src="roe-deer-kid-1022356_1280.jpg" alt="roe deer kid"/>
             </div>
         </div>
         <br/>
 
 
         <div class="row">
+            <div class="col-md-4 col-md-offset-4">
+                <button id="startbutton" value="visible" class="btn btn-primary btn-block">
+                    Start
+                </button>
+            </div>
             <div class="col-md-4">
-
-            </div>
-            <button id="startbutton" value="visible" class="col-md-4">
-                Start
-            </button>
-            <div class="col-md-4">
-
+                <button id="verified-btn" class="btn btn-info pull-right">
+                    <i class="fa fa-check-circle-o"></i> Verified by Darryl Mendonez
+                </button>
             </div>
         </div>
 
     </div>
 
+    <aside>
+        <div id="results-modal" class="modal fade" tabindex="-1" role="dialog">
+          <div class="modal-dialog">
+            <div class="modal-content">
+              <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                <h4 class="modal-title">Time is up!!!</h4>
+              </div>
+              <div class="modal-body">
+                <p id="results"></p>
+              </div>
+              <div class="modal-footer">
+                <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+              </div>
+            </div><!-- /.modal-content -->
+          </div><!-- /.modal-dialog -->
+        </div><!-- /.modal -->
+    </aside>
+
+    <aside>
+        <div id="verified-modal" class="modal fade" tabindex="-1" role="dialog">
+          <div class="modal-dialog">
+            <div class="modal-content">
+              <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                <h4 class="modal-title"><i class="fa fa-check-circle-o"></i> Verified</h4>
+              </div>
+              <div class="modal-body">
+                <a href="https://darrylmendonez.herokuapp.com" target="_blank"><img src="img/darryl.png" class="img-circle img-responsive" width="64px"></a>
+                <br />
+                <p id="verified-text">I, <a href="https://darrylmendonez.herokuapp.com" target="_blank">Darryl Mendonez</a>, certify that there are no errors on this repo.</p>
+              </div>
+              <div class="modal-footer">
+                <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+              </div>
+            </div><!-- /.modal-content -->
+          </div><!-- /.modal-dialog -->
+        </div><!-- /.modal -->
+    </aside>
+
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"
-            integrity="sha512-K1qjQ+NcF2TYO/eI3M6v8EiNYZfA95pQumfvcVrTHtwQVDG+aHRqLi/ETn2uB+1JqwYqVG3LIvdm9lj6imS/pQ=="
-            crossorigin="anonymous">
-
-    </script>
-
-
-    <script rel="script" src="gamescript.js">
-
-    </script>
-
-
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+    <script rel="script" src="gamescript.js"></script>
 </body>
 </html>
